Fix review issues in Azure DevOps connector
- Use witApiClient (dev.azure.com) instead of apiClient (vssps) for
  repository and policy configuration fetchers
- Use classloader resources instead of filesystem paths in test fixtures
- Handle already-deserialized OffsetDateTime in WorkItem field extraction
- Re-comment accidentally uncommented AWS account line in Main.java
- Add DEVOPS_PROJECT constant instead of empty string literal
- Use openapi-generated output dir and layout API in build.gradle